// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Common message container snapshot Correct render common message 1`] = `
<div
  class="component    "
>
  <div
    class="header_info"
  >
    <div
      class=" author"
    >
      <strong>
        Кулинчик Анастасия Игоревна
      </strong>
        
    </div>
    <a
      class="link   "
      href="/"
      rel="noopener"
    >
       Архив 
    </a>
  </div>
  <div
    class="content"
  >
    <div>
      Какое-то соообщение
    </div>
  </div>
  <div
    class="footer"
  >
    <div
      class="footer_status"
    >
      <div
        class="read_status read"
      />
      <div>
        <span
          class="formatted-date "
        >
          23 ИЮЛ 2020, 13:42
        </span>
      </div>
    </div>
    <div
      class="footer_controls"
    >
      <div>
        <a
          class="link link_interactive  "
          href="/"
          rel="noopener"
        >
          Удалить
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Common message container snapshot Originator message 1`] = `
<div
  class="component  originator  "
>
  <div
    class="content"
  >
    <div>
      Какое-то соообщение
    </div>
  </div>
  <div
    class="footer"
  >
    <div
      class="footer_status"
    >
      <div>
        <span
          class="formatted-date "
        >
          23 ИЮЛ 2020, 13:42
        </span>
      </div>
    </div>
    <div
      class="footer_controls"
    >
      <div
        class="footer_control_wrapper"
      >
        <a
          class="link link_interactive bank_link "
          href="/"
          rel="noopener"
        >
          Банковские данные?
        </a>
        <div
          class="select_message passive"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Common message container snapshot Robot message 1`] = `
<div
  class="component  originator info "
>
  <div
    class="content"
  >
    <div>
      Какое-то соообщение
    </div>
  </div>
</div>
`;

exports[`Common message container snapshot Staff only message 1`] = `
<div
  class="component  originator info staff_only"
>
  <div
    class="note_marker"
  >
    ЗАМЕТКА:
  </div>
  <div
    class="content"
  >
    <div>
      Какое-то соообщение
    </div>
  </div>
</div>
`;

exports[`Common message footer snapshot Doesnt originator doesnt viewed message 1`] = `
<div
  class="footer"
>
  <div
    class="footer_status"
  >
    <div
      class="read_status read"
    />
    <div>
      <span
        class="formatted-date "
      >
        23 ИЮЛ 2020, 13:42
      </span>
    </div>
  </div>
  <div
    class="footer_controls"
  >
    <div>
      <a
        class="link link_interactive  "
        href="/"
        rel="noopener"
      >
        Удалить
      </a>
    </div>
  </div>
</div>
`;

exports[`Common message footer snapshot Doesnt viewed doesnt originator message 1`] = `
<div
  class="footer"
>
  <div
    class="footer_status"
  >
    <div
      class="read_status read"
    />
    <div>
      <span
        class="formatted-date "
      >
        23 ИЮЛ 2020, 13:42
      </span>
    </div>
  </div>
  <div
    class="footer_controls"
  >
    <div>
      <a
        class="link link_interactive  "
        href="/"
        rel="noopener"
      >
        Удалить
      </a>
    </div>
  </div>
</div>
`;

exports[`Common message footer snapshot Originator message 1`] = `
<div
  class="footer"
>
  <div
    class="footer_status"
  >
    <div>
      <span
        class="formatted-date "
      >
        23 ИЮЛ 2020, 13:42
      </span>
    </div>
  </div>
  <div
    class="footer_controls"
  >
    <div
      class="footer_control_wrapper"
    >
      <a
        class="link link_interactive bank_link "
        href="/"
        rel="noopener"
      >
        Банковские данные?
      </a>
      <div
        class="select_message passive"
      />
    </div>
  </div>
</div>
`;

exports[`Common message footer snapshot Robot message 1`] = `null`;

exports[`Common message footer snapshot Select active 1`] = `
<div
  class="footer"
>
  <div
    class="footer_status"
  >
    <div>
      <span
        class="formatted-date "
      >
        23 ИЮЛ 2020, 13:42
      </span>
    </div>
  </div>
  <div
    class="footer_controls"
  >
    <div
      class="footer_control_wrapper"
    >
      <a
        class="link link_interactive bank_link "
        href="/"
        rel="noopener"
      >
        Банковские данные?
      </a>
      <div
        class="select_message active"
      />
    </div>
  </div>
</div>
`;

exports[`Common message footer snapshot Select passive 1`] = `
<Fragment>
  <div
    className="footer"
  >
    <div
      className="footer_status"
    >
      <div>
        <FormatDate
          value={1595500956000}
        />
      </div>
    </div>
    <div
      className="footer_controls"
    >
      <div
        className="footer_control_wrapper"
      >
        <Link
          className="bank_link"
          onClick={[Function]}
        >
          Банковские данные?
        </Link>
        <div
          className="select_message passive"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`Common message footer snapshot Viewed message 1`] = `
<div
  class="footer"
>
  <div
    class="footer_status"
  >
    <div
      class="read_status read"
    />
    <div>
      <span
        class="formatted-date "
      >
        23 ИЮЛ 2020, 13:42
      </span>
    </div>
  </div>
  <div
    class="footer_controls"
  />
</div>
`;

exports[`Common message header snapshot Correct render common message 1`] = `
<div
  class="header_info"
>
  <div
    class=" author"
  >
    <strong>
      Кулинчик Анастасия Игоревна
    </strong>
      
  </div>
  <a
    class="link   "
    href="/"
    rel="noopener"
  >
     Архив 
  </a>
</div>
`;

exports[`Common message header snapshot Correct render for staff only message 1`] = `
Array [
  <div
    class="header_info"
  >
    <div
      class=" author"
    >
      <strong>
        Кулинчик Анастасия Игоревна
      </strong>
        
    </div>
    <a
      class="link   "
      href="/"
      rel="noopener"
    >
       Архив 
    </a>
  </div>,
  <div
    class="note_marker"
  >
    ЗАМЕТКА:
  </div>,
]
`;

exports[`Common message header snapshot Correct render with active checkbox 1`] = `null`;

exports[`Common message header snapshot Correct render with forward ability 1`] = `null`;

exports[`Common message header snapshot Correct render with safe mode 1`] = `
<div
  class="header_info"
>
  <div
    class="safe_mode author"
  >
    <strong>
      Кулинчик Анастасия Игоревна
    </strong>
      
  </div>
  <a
    class="link   "
    href="/"
    rel="noopener"
  >
     Архив 
  </a>
</div>
`;
